<resources>
    <string name="app_name">State Capitals</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="play">Play</string>
    <string name="u_s_states_quiz">U.S. States Quiz</string>
    <string name="test_your_knowledge">Test your knowledge of U.S. stateNames with this quizModel app!
        Try to solve the questions correctly. Incomplete quizzes can be left and returned to.
        You can also view your scores of past quizzes.</string>
    <string name="start_new_game">Start New Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="view_past_scores">View Past Scores</string>
    <string name="completed_quizzes_and_scores">Completed Quizzes and Scores</string>
    <string name="state">STATE</string>
    <string name="state_image">state image</string>
    <string name="choice_1">CHOICE_1</string>
    <string name="choice_2">CHOICE_2</string>
    <string name="choice_3">CHOICE_3</string>
    <string name="choice_4">CHOICE_4</string>
    <string name="score">Score:</string>
    <string name="swipe_hint">SWIPE LEFT TO GO TO NEXT\nSWIPE RIGHT TO GO TO PREVIOUS</string>
    <string name="quit_and_save">SAVE AND QUIT</string>
    <string name="quiz">Quiz</string>
    <string name="question">Question</string>
    <string name="question_0_0">Question 0/0</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="capitals_quiz">Capitals Quiz</string>
    <string name="choose_quiz_type_to_begin">Choose quiz type to begin</string>
    <string name="go_back_home">Go Back Home</string>
</resources>