<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".frontend.activities.QuizActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/tvQuestion"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="23sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/state"
        android:id="@+id/tvStateName"
        android:layout_below="@+id/tvQuestion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="23sp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/ivStateImage"
        android:contentDescription="@string/state_image"
        android:layout_below="@+id/tvStateName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ivStateImage"
        android:id="@+id/radiogroup">

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/choice_1"
            android:id="@+id/rbChoice1"
            android:layout_marginTop="20dp"
            android:textSize="15sp" />

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/choice_2"
            android:id="@+id/rbChoice2"
            android:layout_marginTop="0dp"
            android:textSize="15sp" />

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/choice_3"
            android:id="@+id/rbChoice3"
            android:textSize="15sp" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_hint"
        android:id="@+id/tvSwipe"
        android:textSize="23sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/radiogroup"
        />
</RelativeLayout>
