<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".frontend.activities.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/quiz"
            android:textColor="#800080"
            android:textSize="42sp"
            android:background="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvQuestionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="#0A65C7"
        android:background="#ffffff"
        android:textSize="22sp" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        />

    <TextView
        android:id="@+id/tvSwipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/swipe_hint"
        android:textColor="#000000"
        android:background="#ffffff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnQuitAndSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="#FF0000"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/quit_and_save"
        android:textColor="#000000"
        android:textSize="42sp" />

</LinearLayout>
